@@ -111,6 +111,12 @@ if test "x$ABOOK" != xno ; then
 	AC_SUBST(ABOOK)
 fi
 
+AC_PATH_PROG(YPCAT, ypcat, "no")
+if test "x$YPCAT" != xno ; then
+	MODULES="$MODULES m_yppasswd"
+	AC_SUBST(YPCAT)
+fi
+
 AC_PATH_PROG(GPG, gpg, "no")
 if test "x$GPG" != xno ; then
 	MODULES="$MODULES m_gpg"
