@@ -12,7 +12,7 @@ build-stamp:
 
 	env PGP=/usr/bin/pgp PGPK=/usr/bin/pgpk GPG=/usr/bin/gpg \
 		FINGER=/usr/bin/finger ABOOK=/usr/bin/abook \
-		DOTLOCK=/usr/bin/mutt_dotlock \
+		YPCAT=/usr/bin/ypcat DOTLOCK=/usr/bin/mutt_dotlock \
 		./configure --prefix=/usr --libdir='$${prefix}/lib/lbdb' \
 			--mandir='$${prefix}/share/man' --sysconfdir=/etc
 	$(MAKE) CFLAGS="-O2 -g -Wall"
